UI kit || headers&footers page *done

--- a/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
+++ b/src/components/__headers&footers/__header/__authorization--false/authorization--false.pug
@@ -1,3 +1,6 @@
+include ../../../buttons/button-transparent
+include ../../../buttons/button-small
+
 mixin auto--false
     .header__authorization
         a(href="./login.html")
