--- a/src/components/__headers&footers/__footer/footer.pug
+++ b/src/components/__headers&footers/__footer/footer.pug
@@ -1,45 +1,46 @@
 include ../../subscription-text-field/subscription-text-field.pug
 
-footer.footer
-    .inner-container
-        .footer__container
-            .footer__main 
-                .footer__info
-                    a(href="./index.html")
-                        img(src=require('./assets/images/logo-full.svg'), alt="alt").footer__logo 
-                    p.footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» 
-                
-                ul.footer__nav
-                    li.footer__item--title Навигация
-                    li.footer__item О нас
-                    li.footer__item Новости
-                    li.footer__item Служба поддержки
-                    li.footer__item Услуги
+mixin footer
+    footer.footer(class=attributes.class)
+        .inner-container
+            .footer__container
+                .footer__main
+                    .footer__info
+                        a(href="./index.html")
+                            img(alt="alt").footer__logo
+                        p.footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
 
-                ul.footer__nav
-                    li.footer__item--title О нас
-                    li.footer__item О сервисе
-                    li.footer__item Наша команда
-                    li.footer__item Вакансии
-                    li.footer__item Инвесторы
+                    ul.footer__nav
+                        li.footer__item--title Навигация
+                        li.footer__item О нас
+                        li.footer__item Новости
+                        li.footer__item Служба поддержки
+                        li.footer__item Услуги
 
-                ul.footer__nav
-                    li.footer__item--title Служба поддержки
-                    li.footer__item Соглашения
-                    li.footer__item Сообщества
-                    li.footer__item Связь с нами
+                    ul.footer__nav
+                        li.footer__item--title О нас
+                        li.footer__item О сервисе
+                        li.footer__item Наша команда
+                        li.footer__item Вакансии
+                        li.footer__item Инвесторы
 
-                ul.footer__nav
-                    li.footer__item--title Подписка
-                    p.footer__text Получайте специальные предложения и новости сервиса
-                    +subscribe
+                    ul.footer__nav
+                        li.footer__item--title Служба поддержки
+                        li.footer__item Соглашения
+                        li.footer__item Сообщества
+                        li.footer__item Связь с нами
 
-    .footer__line
+                    ul.footer__nav
+                        li.footer__item--title Подписка
+                        p.footer__text Получайте специальные предложения и новости сервиса
+                        +subscribe
 
-    .inner-container
-        .footer__additional
-            .footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
-            .footer__social
-                img(src=require('./assets/images/twitter.svg'), alt="alt").footer__social-network
-                img(src=require('./assets/images/facebook.svg'), alt="alt").footer__social-network
-                img(src=require('./assets/images/instagram.svg'), alt="alt").footer__social-network
+        .footer__line
+
+        .inner-container
+            .footer__additional
+                .footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
+                .footer__social
+                    img(alt="alt").footer__social-network.footer__social-network--twitter
+                    img(alt="alt").footer__social-network.footer__social-network--facebook
+                    img(alt="alt").footer__social-network.footer__social-network--instagram
