--- a/src/components/__headers&footers/__header/header.pug
+++ b/src/components/__headers&footers/__header/header.pug
@@ -4,20 +4,21 @@ include ./__authorization--true/authorization--true.pug
 include ./__authorization--false/authorization--false.pug
 include ./__header-menu/header-menu.pug
 
-.header
-    .inner-container
-        .header__container
-            a(href="./index.html")
-                .header__logo
-                    .header__logo-svg
-                    .header__logo-text
-            .header__content
+mixin header(auto="false")
+    .header
+        .inner-container
+            .header__container
+                a(href="./index.html")
+                    .header__logo
+                        .header__logo-svg
+                        .header__logo-text
+                .header__content
 
-                +header-menu('О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения')
+                    +header-menu('О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения')
 
-                - var authorised = false
+                    - var authorised = auto
 
-                if (authorised === true)
-                    +auto--true
-                else
-                    +auto--false
+                    if (authorised === true)
+                        +auto--true
+                    else
+                        +auto--false
