Pixel Perfect *done

--- a/src/components/__cards/__order/order.scss
+++ b/src/components/__cards/__order/order.scss
@@ -14,7 +14,7 @@
     }
 
     &__date-range {
-        margin-bottom: 1.2rem;
+        margin-bottom: 1.4rem;
     }
 
     &__suptitle {
@@ -26,6 +26,7 @@
     &__dropdown {
         width: 100%;
         margin-bottom: 1.2rem;
+        margin-top: 0.3rem;
     }
 
     &__add {
