--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -93,8 +93,9 @@
     &__value {
         color: $Dark-shade-50;
         text-align: right;
-        font-size: 12px;
+        font-size: 13px;
         line-height: 14.63px;
-        margin-bottom: 20px;
+        margin-top: 5px;
+        margin-bottom: 24px;
     }
 }
