--- a/src/components/rich-checkbox-buttons/rich-checkbox-buttons.pug
+++ b/src/components/rich-checkbox-buttons/rich-checkbox-buttons.pug
@@ -1,5 +1,5 @@
 mixin rich-checkbox
-    form.rich-checkbox
+    form.rich-checkbox(class=attributes.class)
         label.rich-checkbox__label
             input(type='checkbox' checked).rich-checkbox__label-input
             .rich-checkbox__text Широкий коридор
