--- a/src/pages/website/__search-room/search-room.pug
+++ b/src/pages/website/__search-room/search-room.pug
@@ -21,9 +21,9 @@ include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pu
             h3.search__information-title Правила дома
             +checkbox-list(class='search__information-checkbox-list')
             h3.search__information-title Доступность
-            +rich-checkbox
+            +rich-checkbox(class="search__information-checkbox-rich")
             h3.search__information-title Удобства номера
-            +dropdown-room(class='search__information-dropdown')
+            +dropdown-room(class='search__information-dropdown-room')
             +expandable('Дополнительные удобства')(class='search__information-expandable')
         .search__main
             h2.search__main-title Номера, которые мы для вас подобрали
