--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -139,6 +139,10 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .subscription {
+        width: auto;
+    }
 }
 
 @media (max-width: 768px) {
