--- a/src/components/benefits/benefits.scss
+++ b/src/components/benefits/benefits.scss
@@ -3,20 +3,28 @@
 
 .benefits {
     display: flex;
-    column-gap: 1em;
+    column-gap: 0.7rem;
     border-bottom: 1px solid $Dark-shade-10;
     width: 280px;
     align-items: center;
     padding-bottom: 17px;
 
     &:not(:last-of-type) {
-        margin-bottom: 22px;
-        margin-top: 21px;
+        margin-bottom: 20px;
+        margin-top: 24px;
+    }
+
+    &-comfort__text {
+        display: flex;
+        flex-direction: column;
+        row-gap: 5px;
+        margin-top: 5px;
     }
 
     &__text-name {
         margin: 0;
         font-size: 14px;
+        text-transform: none;
     }
 
     &__text-description {
