--- a/src/components/subscription-text-field/subscription-text-field.scss
+++ b/src/components/subscription-text-field/subscription-text-field.scss
@@ -2,7 +2,7 @@
 
 .subscription {
     position: relative;
-    width: fit-content;
+    width: 100%;
 
     &__email {
         @include text-field;
