--- a/src/pages/website/__room-details/room-details.scss
+++ b/src/pages/website/__room-details/room-details.scss
@@ -6,7 +6,7 @@
 .room {
   display: flex;
   justify-content: space-between;
-  margin: 5.1rem 0;
+  margin: 5.2rem 0;
   column-gap: 1rem;
 
   &__collage {
@@ -43,6 +43,7 @@
     justify-content: flex-start;
     column-gap: 5.8rem;
     flex-wrap: wrap;
+    row-gap: 0.2rem;
 
   }
 
@@ -51,7 +52,7 @@
     justify-content: space-between;
     column-gap: 2.1rem;
     position: relative;
-    margin-top: 1.2rem;
+    margin-top: 1.9rem;
   }
 
   &__list {
@@ -114,6 +115,7 @@
     font-size: 19px;
     color: $Dark-shade-100;
     margin: 0;
+    text-transform: none;
   }
 
   &__title-add {
@@ -158,7 +160,7 @@
 
   &__rules > &__title {
     margin-left: 1.3rem;
-    margin-bottom: 1.2rem;
+    margin-bottom: 1.5rem;
   }
 
   &__cancel {
@@ -167,6 +169,7 @@
 
   &__cancel > &__title {
     margin-left: 0.8rem;
+    margin-bottom: 1.5rem;
   }
 
   &__text {
