--- a/src/pages/website/__search-room/search-room.scss
+++ b/src/pages/website/__search-room/search-room.scss
@@ -12,7 +12,7 @@
 .search {
   display: flex;
   column-gap: 2rem;
-  margin-top: 1.1em;
+  margin-top: 1rem;
   justify-content: space-between;
   position: relative;
 
@@ -24,35 +24,38 @@
     &-title {
       font-size: 24px;
       color: $Dark-shade-100;
-      margin-bottom: 0.9em;
+      margin-bottom: 1.7rem;
     }
   }
 
   &__information {
     display: flex;
     flex-direction: column;
+    margin-top: 1.1rem;
 
     &-filter {
-      margin-bottom: 0.19em;
       width: 266px;
+      margin-top: 0.3rem;
+      margin-bottom: 1.5rem;
     }
 
     &-title {
       text-transform: uppercase;
       font-size: 12px;
       color: $Dark-shade-100;
-      margin-bottom: 0.1em;
+      margin: 0;
     }
 
     &-dropdown {
-      margin-bottom: 1em;
+      margin-bottom: 2.3rem;
+      margin-top: 0.3rem;
     }
 
     &-text {
       font-size: 12px;
       color: $Dark-shade-50;
       margin-top: 1.5em;
-      margin-bottom: 0.6em;
+      margin-bottom: 1.6rem;
     }
 
     &-range {
@@ -60,11 +63,21 @@
     }
 
     &-checkbox-list {
-      margin-bottom: 2.1em;
+      margin-bottom: 3.2rem;
+      margin-top: 1rem;
+    }
+
+    &-checkbox-rich {
+      margin-top: 1rem;
+      margin-bottom: 1.2rem;
+    }
+
+    &-dropdown-room {
+      margin-top: 0.3rem;
     }
 
     &-expandable {
-      margin-top: 1em;
+      margin-top: 1.4rem;
     }
   }
 
@@ -134,5 +147,10 @@
   }
   .search__information-dropdown {
     width: 266px;
+  }
+
+  .search__information-dropdown-room {
+    max-width: 266px;
+    width: 100%;
   }
 }
