--- a/src/components/__headers&footers/__footer/footer.pug
+++ b/src/components/__headers&footers/__footer/footer.pug
@@ -7,7 +7,7 @@ mixin footer
                 .footer__main
                     .footer__info
                         a(href="./index.html")
-                            img(alt="alt").footer__logo
+                            img(alt="logo").footer__logo
                         p.footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
 
                     ul.footer__nav
@@ -41,6 +41,6 @@ mixin footer
             .footer__additional
                 .footer__copyright Copyright © 2018 Toxin отель. Все права защищены.
                 .footer__social
-                    img(alt="alt").footer__social-network.footer__social-network--twitter
-                    img(alt="alt").footer__social-network.footer__social-network--facebook
-                    img(alt="alt").footer__social-network.footer__social-network--instagram
+                    img(alt="twitter").footer__social-network.footer__social-network--twitter
+                    img(alt="facebook").footer__social-network.footer__social-network--facebook
+                    img(alt="instagram").footer__social-network.footer__social-network--instagram
