UI kit || cards fix

--- a/src/pages/UI-kit/__cards/cards.pug
+++ b/src/pages/UI-kit/__cards/cards.pug
@@ -23,5 +23,5 @@ html(lang="ru")
                     +login
                 .cards__flex
                     .datepicker-form
-                    +products("/assets/images/rooms/room888.jpg", "5")
-                    +products("/assets/images/rooms/room840.jpg", "4")
+                    +products("./assets/images/rooms/room888.jpg", "5")
+                    +products("./assets/images/rooms/room840.jpg", "4")
